refactor: absolute path import, style naming on camelcase

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,9 +28,7 @@
       "version": "detect"
     },
     "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx"]
-      }
+      "node": { "paths": ["src"], "extensions": [".js", ".jsx"] }
     }
   }
 }
