--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "lint": "eslint \"src/**/*.{js, jsx}\" --quiet"
   },
   "engines": {
-    "node": "^18.15.0",
-    "npm": "^9.5.0"
+    "node": "^18.x",
+    "npm": "^9.5.x"
   },
   "eslintConfig": {
     "extends": [
