--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "engines": {
     "node": "^18.x",
-    "npm": "^9.5.x"
+    "npm": "^9.5.x",
+    "yarn": "^1.2.x"
   },
   "eslintConfig": {
     "extends": [
