--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,19 @@
 {
   "extends": [
+    "react-app/jest",
     "eslint:recommended",
     "plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:testing-library/react",
+    "plugin:jest-dom/recommended",
     "prettier"
   ],
   "rules": {
     "react/prop-types": 0,
     "react/react-in-jsx-scope": 0
   },
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": ["react", "import", "jsx-a11y", "testing-library", "jest-dom"],
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
